2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/FileCopyMode.cs,
	  MonoDevelop.Projects/FileCopySet.cs,
	  MonoDevelop.Projects/BuildAction.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/ProjectFile.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs,
	  md1format.xml,
	  MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs,
	  MonoDevelop.Projects.Formats.MD1/MD1CustomDataItem.cs,
	  MonoDevelop.Projects.Formats.MD1/BuildActionDataType.cs: Add
	  support for arbitrary build actions, and implement "local copy" for
	  files and references, matching VS behaviour.
	* MonoDevelop.Projects.mdp, Makefile.am: Updated.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom/ParsedDocument.cs: Added an
	  nonserializable flag for parsed documents.

2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom/FoldingRegion.cs,
	  MonoDevelop.Projects.Dom/ParsedDocument.cs,
	  MonoDevelop.Projects.Dom/ParsedDocumentEventArgs.cs: Add filename
	  info to ParsedDocument so that parsers no longer have to return a
	  CompilationUnit to have filename info. Generalise fold generation
	  code -- add support for different fold types, moves folding logic
	  out of the source editor addin.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ItemConfiguration.cs: The PlatformTarget is not
	  the same as the platform specificed in the configuration name. It
	  may have a different value. Moved element to c# binding, since it
	  is a c# compiler option.
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  SubType must be serialized after DepenentUpon.
	* MonoDevelop.Projects.mdp, Makefile.am: Add missing reference.
